Edit to make more eid-y!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Secret Santa Generator</title>
+        <title>Mysterious Molvi Generator</title>
 
         <script src="vendors/Lodash-3.10.1.js"></script>
         <script src="vendors/Cryptojs.aes-3.1.2.js"></script>
@@ -27,11 +27,9 @@
             }
 
             body {
-                background-image: url(assets/santa.png);
-                background-position: bottom right;
-                background-repeat: no-repeat;
+                background-color: #e4c0a4;
 
-                font-family: 'Comic Sans MS';
+                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             }
 
             .main {
@@ -45,6 +43,7 @@
                 padding: 20px;
 
                 flex: 1;
+                
             }
 
             .instructions {
@@ -54,7 +53,7 @@
             .instructions a {
                 text-decoration: none;
 
-                color: #0CB50C;
+                color: #3a7d7c;
             }
 
             .input {
@@ -64,7 +63,7 @@
                 width: 100%;
                 flex: auto;
 
-                border: 10px solid #0CB50C;
+                border: 10px solid #3a7d7c;
                 border-radius: 10px;
 
                 padding: 15px;
@@ -81,18 +80,17 @@
                 flex: none;
                 height: 100px;
 
-                border: 10px solid #0CB50C;
+                border: 10px solid #3a7d7c;
                 border-radius: 10px;
 
                 font-family: inherit;
                 font-size: 40px;
 
-                background-color: #EA1212;
-                color: #FFFFFF;
+                background-color: #aacfcc;
             }
 
             .generate:focus {
-                border-color: #E6E020;
+                border-color: #4c8c8c;
 
                 outline: none;
             }
@@ -102,7 +100,7 @@
 
                 flex: none;
 
-                border: 10px solid #E6E020;
+                border: 10px solid #4c8c8c;
                 border-radius: 10px;
 
                 padding: 15px;
@@ -152,10 +150,10 @@
 
         <div class="main">
 
-            <div class="part" style="overflow-y: auto">
+            <div class="part" style="overflow-y: auto;">
                 <div class="instructions">
-                    <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Secret Santa Generator</h1>
-                    <p>No signup, no email, no bullshit. Just a straightforward <a href="https://github.com/arcanis/secretsanta">open-source</a> tool to help you generate your secret santa pairings. One static page, and that's it.</p>
+                    <h1><img src="assets/eid-symbol.png" style="vertical-align: middle; height: 1.5em;" /> Mysterious Molvi Generator</h1>
+                    <p>No signup, no email, no bullshit. Just a straightforward <a href="https://github.com/notatiyyah/mysterious-molvi">open-source</a> tool to help you generate your secret santa pairings. One static page, and that's it.</p>
                     <p>In the most common case (no exclusion rules, pair each guest with another at random), enter the name of your guests one line at a time. Once done, press "generate" and you're all set: send the generated links to your guests (by mail, chat, whatever floats your boat) and their pairing will be revealed to them (and only them) once they open the link.</p>
                     <h2>Where does this tool come from?</h2>
                     <p>I wanted to make a Secret Santa over Facebook without having to reveal to anyone my guests email addresses (so nothing that would require a backend). I also wanted not to know who was paired with me, so I had to find a way to somehow obfuscate the information. And being a developer, well, my first thought was "Let's AES it, for fun and profits!". Classic.</p>
