--- a/pairing.html
+++ b/pairing.html
@@ -19,10 +19,12 @@
             html, body, .main {
                 margin: 0;
 
-                width: 100%;
-                height: 100%;
+                width: 100vw;
+                height: 100vh;
 
                 padding: 0;
+                position: absolute;
+                overflow: hidden;
             }
 
             body {
@@ -44,16 +46,6 @@
                 color: #FFFFFF;
             }
 
-            .main {
-                display: flex;
-            }
-
-            .background {
-                position: absolute;
-
-                left: 0;
-                bottom: 0;
-            }
             .content-wrapper{
                 position: absolute;
                 top: 0;
